# OLYMPUS

./: .gitignore  README.md  main.py  pyproject.toml
config/: settings.py
db/: JsonDatabase.py
src/: olympus.py
src/db/: JsonDatabase.py
src/hardware_io/: rfid_scanner.py  toggle_switch.py
utils/: Logger.py
