[tool.poetry]
name = "nb-shed-2023"
version = "0.1.0"
description = "NB Secure-ish Hacker Entrance Device"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
