[tool.poetry]
name = "olympus"
version = "0.1.0"
description = "NB Secure-ish Hacker Entrance Device"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
spidev = "^3.6"
RPi.GPIO = "^0.7.1"
mfrc522 = "^0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"